Add Algolia markup

--- a/docs/_includes/components/docs-body.html
+++ b/docs/_includes/components/docs-body.html
@@ -6,7 +6,7 @@
 %}
 
 <div class="bd-docs-body">
-  <div class="bd-docs-content bd-content">
+  <div class="bd-docs-content bd-content algolia-content">
     {{ content }}
   </div>
 
