--- a/docs/_includes/components/hero.html
+++ b/docs/_includes/components/hero.html
@@ -1,7 +1,7 @@
 {% capture hero_body %}
 <div class="bd-hero-body">
   <div class="bd-hero-heading">
-    <h1 class="title">
+    <h1 class="title algolia-lvl0">
       {% if include.icon %}
         <span class="icon">
           <i class="{{ include.icon }}"></i>
@@ -9,7 +9,7 @@
       {% endif %}
       {{ include.title | markdownify }}
     </h1>
-    <div class="subtitle is-4">
+    <div class="subtitle is-4 algolia-lvl1">
       {{ include.subtitle | markdownify }}
     </div>
     {{ include.content }}
