--- a/docs/_includes/elements/link.html
+++ b/docs/_includes/elements/link.html
@@ -14,7 +14,7 @@
   {% endif %}
 
   <div class="bd-link-body">
-    <h2 class="bd-link-title">
+    <h2 class="bd-link-title algolia-lvl1">
       {% if include.new %}
         <span style="float: right;" class="ml-2 tag is-primary">
           New!
