--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -38,7 +38,7 @@ route: documentation
   </main>
 
   <aside id="docsSide" class="bd-docs-side {% if page.fullwidth %}bd-stickied{% endif %}">
-    {% include global/side-sponsor.html %}
+    {% include global/fortyfour.html %}
 
     {% if page.meta %}
       {%
