--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -16790,7 +16790,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   padding: 3rem 1.5rem 6rem;
 }
 
-.bd-option-or p, .bd-snippet-preview.bd-is-mwb, .bd-book-cover, .bd-side-sponsor, .bd-backers-platform, .bd-backers-platform .bd-backers-platform-logo, .bd-backers-heading, .bd-single-carbon, .bd-single-image, .bd-snippet-mwb, .bd-partner-sponsor, .bd-columns-tool, .bd-footer-sponsor, .bd-footer-donation-action, .bd-footer-star-figure {
+.bd-option-or p, .bd-snippet-preview.bd-is-mwb, .bd-book-cover, .bd-fortyfour-image, .bd-fortyfour-cta, .bd-side-sponsor, .bd-backers-platform, .bd-backers-platform .bd-backers-platform-logo, .bd-backers-heading, .bd-single-carbon, .bd-single-image, .bd-snippet-mwb, .bd-partner-sponsor, .bd-columns-tool, .bd-footer-sponsor, .bd-footer-donation-action, .bd-footer-star-figure {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -19283,6 +19283,41 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   .native-js {
     font-size: 1.25rem;
   }
+}
+
+.bd-fortyfour {
+  display: block;
+  padding: var(--docs-side-padding);
+  padding-bottom: 0;
+  text-align: center;
+}
+
+.bd-fortyfour-label {
+  color: #7a7a7a;
+  font-size: 0.75em;
+  margin-bottom: 0.5em;
+  opacity: 0.5;
+}
+
+.bd-fortyfour-text {
+  display: none;
+  font-size: 0.75em;
+}
+
+.bd-fortyfour-cta {
+  margin-top: 0.5em;
+}
+
+.bd-fortyfour:hover .button,
+.bd-fortyfour .button:hover {
+  background-color: var(--primary) !important;
+  color: var(--primary-light) !important;
+}
+
+.bd-fortyfour:active .button,
+.bd-fortyfour .button:active {
+  background-color: var(--primary-dark) !important;
+  color: var(--primary-invert) !important;
 }
 
 :root {
