--- a/docs/_includes/global/fortyfour.html
+++ b/docs/_includes/global/fortyfour.html
@@ -1,9 +1,9 @@
-<a class="bd-banner is-fortyfour" href="https://jgthms.com/css-in-44-minutes-ebook" target="_blank">
-  <p class="bd-banner-label">
+<a class="bd-fortyfour" href="https://jgthms.com/css-in-44-minutes-ebook" target="_blank">
+  <p class="bd-fortyfour-label">
     My CSS ebook
   </p>
 
-  <figure class="bd-banner-image">
+  <figure class="bd-fortyfour-image">
     {%
       include elements/responsive-image.html
       path="css-book/css-in-44-minutes-book-cover"
@@ -14,11 +14,13 @@
     %}
   </figure>
 
-  <p class="bd-banner-text">
-    My 44-page ebook "<strong>CSS in 44 minutes</strong>" is out! <span class="bd-emoji-bis">😃</span>
+  <p class="bd-fortyfour-text">
+    My 44-page ebook to teach you <strong>CSS in 44 minutes</strong>
   </p>
 
-  <span class="button is-success is-rounded">
-    <strong>Buy now →</strong>
-  </span>
+  <div class="bd-fortyfour-cta">
+    <span class="button is-primary is-light is-rounded is-small">
+      <strong>Buy now →</strong>
+    </span>
+  </div>
 </a>
