--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -218,6 +218,7 @@ $navbar-breakpoint: $tablet;
 @import './_sass/components/variables';
 @import './_sass/components/book';
 @import './_sass/components/native';
+@import './_sass/components/fortyfour';
 
 @import './_sass/pages/index';
 @import './_sass/pages/docs';
