Fix link on the website
expo link was pointing to love.path

--- a/docs/_includes/index/beautified.html
+++ b/docs/_includes/index/beautified.html
@@ -12,7 +12,7 @@
       See what Bulma developers are bulding
     </div>
 
-    <a class="button bd-fat-button is-expo is-light is-size-4-widescreen" href="{{ site.data.links.by_id.love.path }}">
+    <a class="button bd-fat-button is-expo is-light is-size-4-widescreen" href="{{ site.data.links.by_id.expo.path }}">
       <span class="icon has-text-expo">
         <i class="fas fa-star"></i>
       </span>
