--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -327,7 +327,6 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
      -moz-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
           text-size-adjust: 100%;
 }
 
@@ -15006,6 +15005,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-white .tabs li.is-active a {
+  color: white !important;
   opacity: 1;
 }
 
@@ -15084,6 +15084,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-black .tabs li.is-active a {
+  color: #0a0a0a !important;
   opacity: 1;
 }
 
@@ -15162,6 +15163,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-light .tabs li.is-active a {
+  color: whitesmoke !important;
   opacity: 1;
 }
 
@@ -15240,6 +15242,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-dark .tabs li.is-active a {
+  color: #363636 !important;
   opacity: 1;
 }
 
@@ -15318,6 +15321,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-primary .tabs li.is-active a {
+  color: #00d1b2 !important;
   opacity: 1;
 }
 
@@ -15396,6 +15400,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-link .tabs li.is-active a {
+  color: #485fc7 !important;
   opacity: 1;
 }
 
@@ -15474,6 +15479,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-info .tabs li.is-active a {
+  color: #3e8ed0 !important;
   opacity: 1;
 }
 
@@ -15552,6 +15558,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-success .tabs li.is-active a {
+  color: #48c78e !important;
   opacity: 1;
 }
 
@@ -15630,6 +15637,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-warning .tabs li.is-active a {
+  color: #ffe08a !important;
   opacity: 1;
 }
 
@@ -15708,6 +15716,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-danger .tabs li.is-active a {
+  color: #f14668 !important;
   opacity: 1;
 }
 
@@ -15786,6 +15795,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-expo .tabs li.is-active a {
+  color: #ffd257 !important;
   opacity: 1;
 }
 
@@ -15864,6 +15874,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-love .tabs li.is-active a {
+  color: #f14668 !important;
   opacity: 1;
 }
 
@@ -15942,6 +15953,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-patreon .tabs li.is-active a {
+  color: #f96854 !important;
   opacity: 1;
 }
 
@@ -16020,6 +16032,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-rss .tabs li.is-active a {
+  color: #f26522 !important;
   opacity: 1;
 }
 
@@ -16098,6 +16111,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-bleeding .tabs li.is-active a {
+  color: #abf47c !important;
   opacity: 1;
 }
 
@@ -16176,6 +16190,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-sass .tabs li.is-active a {
+  color: #bf4080 !important;
   opacity: 1;
 }
 
@@ -16254,6 +16269,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-amazon .tabs li.is-active a {
+  color: #ffd863 !important;
   opacity: 1;
 }
 
@@ -16332,6 +16348,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-sponsor .tabs li.is-active a {
+  color: #ea4aaa !important;
   opacity: 1;
 }
 
@@ -16410,6 +16427,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-twitter .tabs li.is-active a {
+  color: #55acee !important;
   opacity: 1;
 }
 
@@ -16488,6 +16506,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-videos .tabs li.is-active a {
+  color: #48c78e !important;
   opacity: 1;
 }
 
@@ -16566,6 +16585,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-extensions .tabs li.is-active a {
+  color: #3e8ed0 !important;
   opacity: 1;
 }
 
@@ -16644,6 +16664,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .hero.is-bootstrap .tabs li.is-active a {
+  color: #6f5499 !important;
   opacity: 1;
 }
 
@@ -17747,7 +17768,6 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .bd-snippet.bd-is-fullwidth {
-  box-shadow: inset 0 0 0 1px red;
   margin-left: calc(-1 * var(--docs-outer));
   margin-right: calc(-1 * var(--docs-outer));
 }
