--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -56,6 +56,7 @@ $hero-colors: $colors !default
             opacity: 1
         li
           &.is-active a
+            color: $color !important
             opacity: 1
         &.is-boxed,
         &.is-toggle
