Fix modifiers link on main page

--- a/docs/_includes/index/modifiers.html
+++ b/docs/_includes/index/modifiers.html
@@ -1,4 +1,4 @@
-{% assign modifiers_link = site.data.links.by_id['modifiers-syntax'] %}
+{% assign modifiers_link = site.data.links.by_id['overview-modifiers'] %}
 {% assign heading_href = site.url | append: modifiers_link.path %}
 
 <section class="bd-index-section">
