add until-widescreen/fullhd class generations

--- a/sass/helpers/typography.sass
+++ b/sass/helpers/typography.sass
@@ -26,6 +26,12 @@
 +fullhd
   +typography-size('fullhd')
 
++until-widescreen
+  +typography-size('until-widescreen')
+
++until-fullhd
+  +typography-size('until-fullhd')
+
 $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'right': 'right')
 
 @each $alignment, $text-align in $alignments
@@ -59,6 +65,12 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
       text-align: #{$text-align} !important
   +fullhd
     .has-text-#{$alignment}-fullhd
+      text-align: #{$text-align} !important
+  +until-widescreen
+    .has-text-#{$alignment}-until-widescreen
+      text-align: #{$text-align} !important
+  +until-fullhd
+    .has-text-#{$alignment}-until-fullhd
       text-align: #{$text-align} !important
 
 .is-capitalized
