add visibility for until-X breakpoints

--- a/sass/helpers/visibility.sass
+++ b/sass/helpers/visibility.sass
@@ -134,3 +134,11 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 +fullhd
   .is-invisible-fullhd
     visibility: hidden !important
+
++until-widescreen
+  .is-invisible-until-widescreen
+    visibility: hidden !important
+
++until-fullhd
+  .is-invisible-until-fullhd
+    visibility: hidden !important
