Card footer item button change Add card-footer-item styles for button element Change docs to use buttons over anchors

--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -101,3 +101,13 @@ $card-media-margin: $block-spacing !default
 .card
   .media:not(:last-child)
     margin-bottom: $card-media-margin
+
+button.card-footer-item
+    border: 0
+    border-radius: 0
+    color: $link
+    height: auto
+    strong
+      color: currentColor
+    &:hover
+      color: $link-hover
