--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -66,9 +66,9 @@ meta:
     </div>
   </div>
   <footer class="card-footer">
-    <a href="#" class="card-footer-item">Save</a>
-    <a href="#" class="card-footer-item">Edit</a>
-    <a href="#" class="card-footer-item">Delete</a>
+    <button class="card-footer-item button">Save</button>
+    <button class="card-footer-item button">Edit</button>
+    <button class="card-footer-item button">Delete</button>
   </footer>
 </div>
 {% endcapture %}
@@ -199,15 +199,15 @@ meta:
 {% include elements/snippet.html content=card_image size="1-2" %}
 
 <div class="content">
-  <p>The <code>card-footer</code> acts as a list of for several <code>card-footer-item</code> elements:</p>
+  <p>The <code>card-footer</code> acts as a list for <code>card-footer-item</code> elements:</p>
 </div>
 
 {% capture card_footer %}
 <div class="card">
   <footer class="card-footer">
-    <a href="#" class="card-footer-item">Save</a>
-    <a href="#" class="card-footer-item">Edit</a>
-    <a href="#" class="card-footer-item">Delete</a>
+    <button class="card-footer-item button">Save</button>
+    <button class="card-footer-item button">Edit</button>
+    <button class="card-footer-item button">Delete</button>
   </footer>
 </div>
 {% endcapture %}
