--- a/docs/_sass/old/expo.sass
+++ b/docs/_sass/old/expo.sass
@@ -15,11 +15,11 @@
   justify-content: center
   margin-bottom: 1.5rem
   position: relative
-  &:hover
-    .bd-website-shadow
-      opacity: 0
-    .bd-website-overlay
-      opacity: 0.25
+  // &:hover
+  //   .bd-website-shadow
+  //     opacity: 0
+  //   .bd-website-overlay
+  //     opacity: 0.25
   .b-lazy
     opacity: 0
     transition: opacity 500ms $easing
