Replace division operator by math.div
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,6 +1,8 @@
+@use "sass:math"
 @import "../utilities/mixins"
 
-$level-item-spacing: ($block-spacing / 2) !default
+$block-spacing: 1.5rem !default
+$level-item-spacing: math.div($block-spacing, 2) !default
 
 .level
   @extend %block
