--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,3 +1,4 @@
+@use "sass:math"
 @import "../utilities/controls"
 @import "../utilities/mixins"
 
@@ -84,14 +85,14 @@ $button-colors: $colors !default
       height: 1.5em
       width: 1.5em
     &:first-child:not(:last-child)
-      +ltr-property("margin", calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width}), false)
-      +ltr-property("margin", $button-padding-horizontal / 4)
+      +ltr-property("margin", calc(#{math.div(-1, 2) * $button-padding-horizontal} - #{$button-border-width}), false)
+      +ltr-property("margin", math.div($button-padding-horizontal, 4))
     &:last-child:not(:first-child)
-      +ltr-property("margin", $button-padding-horizontal / 4, false)
-      +ltr-property("margin", calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width}))
+      +ltr-property("margin", math.div($button-padding-horizontal, 4), false)
+      +ltr-property("margin", calc(#{math.div(-1, 2) * $button-padding-horizontal} - #{$button-border-width}))
     &:first-child:last-child
-      margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
-      margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+      margin-left: calc(#{math.div(-1, 2) * $button-padding-horizontal} - #{$button-border-width})
+      margin-right: calc(#{math.div(-1, 2) * $button-padding-horizontal} - #{$button-border-width})
   // States
   &:hover,
   &.is-hovered
