--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -1,3 +1,4 @@
+@use "sass:math"
 @import "../utilities/mixins"
 
 $column-gap: 0.75rem !default
@@ -62,9 +63,9 @@ $column-gap: 0.75rem !default
   @for $i from 0 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
-      width: percentage($i / 12)
+      width: percentage(math.div($i, 12))
     .columns.is-mobile > &.is-offset-#{$i}
-      +ltr-property("margin", percentage($i / 12), false)
+      +ltr-property("margin", percentage(math.div($i, 12)), false)
   +mobile
     &.is-narrow-mobile
       flex: none
@@ -120,9 +121,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-mobile
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-mobile
-        +ltr-property("margin", percentage($i / 12), false)
+        +ltr-property("margin", percentage(math.div($i, 12)), false)
   +tablet
     &.is-narrow,
     &.is-narrow-tablet
@@ -199,10 +200,10 @@ $column-gap: 0.75rem !default
       &.is-#{$i},
       &.is-#{$i}-tablet
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet
-        +ltr-property("margin", percentage($i / 12), false)
+        +ltr-property("margin", percentage(math.div($i, 12)), false)
   +touch
     &.is-narrow-touch
       flex: none
@@ -258,9 +259,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-touch
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-touch
-        +ltr-property("margin", percentage($i / 12), false)
+        +ltr-property("margin", percentage(math.div($i, 12)), false)
   +desktop
     &.is-narrow-desktop
       flex: none
@@ -316,9 +317,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-desktop
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-desktop
-        +ltr-property("margin", percentage($i / 12), false)
+        +ltr-property("margin", percentage(math.div($i, 12)), false)
   +widescreen
     &.is-narrow-widescreen
       flex: none
@@ -374,9 +375,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-widescreen
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-widescreen
-        +ltr-property("margin", percentage($i / 12), false)
+        +ltr-property("margin", percentage(math.div($i, 12)), false)
   +fullhd
     &.is-narrow-fullhd
       flex: none
@@ -432,9 +433,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-fullhd
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-fullhd
-        +ltr-property("margin", percentage($i / 12), false)
+        +ltr-property("margin", percentage(math.div($i, 12)), false)
 
 .columns
   +ltr-property("margin", (-$column-gap), false)
