Replace division operator by math.div in the docs
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/docs/_sass/index/best.scss
+++ b/docs/_sass/index/best.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $best-item-width: 520;
 $best-screenshot-width: 504;
 $best-count: 6;
@@ -5,7 +7,7 @@ $best-more-count: 6;
 $best-total-count: $best-count + (2 * $best-more-count);
 $best-total-width: $best-item-width * $best-total-count;
 $best-speed: 100; // px per second
-$best-duration: $best-total-width / $best-speed * 1s;
+$best-duration: math.div($best-total-width, $best-speed) * 1s;
 $best-padding: $block-spacing;
 $best-height: 386px;
 
