--- a/docs/_sass/old/focus.sass
+++ b/docs/_sass/old/focus.sass
@@ -1,3 +1,5 @@
+@use "sass:math"
+
 @keyframes bdGrow
   from
     transform: scale(0)
@@ -36,7 +38,7 @@ $focus-delay: 1s
   animation-timing-function: $cubic-less-dramatic
   transform-origin: center center
 
-$delay-subtitle: $delay / 2
+$delay-subtitle: math.div($delay, 2)
 
 // Intro
 .intro-title
