--- a/docs/_sass/index/focus-animations.scss
+++ b/docs/_sass/index/focus-animations.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @keyframes bdGrow {
   from {
     transform: scale(0);
@@ -49,7 +51,7 @@ $focus-delay: 0;
   transform-origin: center center;
 }
 
-$delay-subtitle: $delay / 2;
+$delay-subtitle: math.div($delay, 2);
 
 // Titles
 .bd-focus-item {
