--- a/docs/_sass/pages/expo.scss
+++ b/docs/_sass/pages/expo.scss
@@ -2,7 +2,7 @@ $website-gap: 0px;
 $website-width: 672px;
 
 .bd-websites {
-  --gap: #{$website-gap};
+  --hm: #{$website-hm};
   --width: #{$website-width};
   --spacing: 1.5rem;
   display: grid;
@@ -53,7 +53,7 @@ $website-width: 672px;
 }
 
 .bd-website-date {
-  color: $text-light;
+  color: $text-dark;
 }
 
 .bd-website-image {
