#3315 Add has-shadow to navbar documentation

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -1292,6 +1292,11 @@ $(document).ready(function() {
           <br> <strong>Left</strong> and <strong>Right</strong> paddings with <strong>2rem</strong>
       </td>
     </tr>
+    <tr>
+      <th rowspan="1">Shading</th>
+      <td><code>has-shadow</code></td>
+      <td>Adds a small amount of box-shadow around the navbar</td>
+    </tr>
   </tbody>
 </table>
 
