Round the top corners on .panel-block:first-child
When there is no `.panel-heading` present, round the top corners of the first `.panel-block`.

--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -102,6 +102,9 @@ $panel-colors: $colors !default
     color: $panel-block-active-color
     .panel-icon
       color: $panel-block-active-icon-color
+  &:first-child
+    border-top-left-radius: $panel-radius
+    border-top-right-radius: $panel-radius
   &:last-child
     border-bottom-left-radius: $panel-radius
     border-bottom-right-radius: $panel-radius
