Use custom divide function

--- a/docs/_sass/old/focus.sass
+++ b/docs/_sass/old/focus.sass
@@ -36,7 +36,7 @@ $focus-delay: 1s
   animation-timing-function: $cubic-less-dramatic
   transform-origin: center center
 
-$delay-subtitle: $delay / 2
+$delay-subtitle: $delay * 0.5
 
 // Intro
 .intro-title
