Add docs spacing table styles

--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -219,6 +219,7 @@ $navbar-breakpoint: $tablet;
 @import './_sass/components/book';
 @import './_sass/components/native';
 @import './_sass/components/fortyfour';
+@import './_sass/components/spacing-table';
 
 @import './_sass/pages/index';
 @import './_sass/pages/docs';
