--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -19404,6 +19404,52 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   color: var(--primary-invert) !important;
 }
 
+.bd-spacing-table:hover {
+  color: #dbdbdb;
+}
+
+.bd-spacing-table:hover code {
+  background: none;
+  color: #dbdbdb;
+}
+
+.bd-spacing-table .bd-current-row {
+  background-color: whitesmoke;
+}
+
+.bd-spacing-table .bd-current-row:first-child {
+  background-color: #feecf0;
+  color: #363636;
+}
+
+.bd-spacing-table .bd-current-row:first-child code {
+  background-color: #f14668;
+  color: #fff;
+}
+
+.bd-spacing-table .bd-current-row.bd-current-column {
+  background-color: #ebfffc;
+  color: #363636;
+}
+
+.bd-spacing-table .bd-current-row.bd-current-column code {
+  background-color: #00d1b2;
+  color: #fff;
+}
+
+.bd-spacing-table .bd-current-column {
+  background-color: whitesmoke;
+}
+
+.bd-spacing-table .bd-current-value {
+  background-color: #feecf0;
+}
+
+.bd-spacing-table .bd-current-value code {
+  background-color: #f14668;
+  color: #fff;
+}
+
 :root {
   --bd-index-vertical: 1.5rem;
   --bd-index-gap: 3rem;
