--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3261,8 +3261,8 @@ fieldset[disabled] .button {
 
 .button.is-loading::after {
   position: absolute;
-  left: calc(50% - (1em / 2));
-  top: calc(50% - (1em / 2));
+  left: calc(50% - (1em * 0.5));
+  top: calc(50% - (1em * 0.5));
   position: absolute !important;
 }
 
@@ -14541,6 +14541,10 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   font-style: italic !important;
 }
 
+.is-underlined {
+  text-decoration: underline !important;
+}
+
 .has-text-weight-light {
   font-weight: 300 !important;
 }
@@ -19398,6 +19402,52 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 .bd-fortyfour .button:active {
   background-color: var(--primary-dark) !important;
   color: var(--primary-invert) !important;
+}
+
+.bd-spacing-table:hover {
+  color: #dbdbdb;
+}
+
+.bd-spacing-table:hover code {
+  background: none;
+  color: #dbdbdb;
+}
+
+.bd-spacing-table .bd-current-row {
+  background-color: whitesmoke;
+}
+
+.bd-spacing-table .bd-current-row:first-child {
+  background-color: #feecf0;
+  color: #363636;
+}
+
+.bd-spacing-table .bd-current-row:first-child code {
+  background-color: #f14668;
+  color: #fff;
+}
+
+.bd-spacing-table .bd-current-row.bd-current-column {
+  background-color: #ebfffc;
+  color: #363636;
+}
+
+.bd-spacing-table .bd-current-row.bd-current-column code {
+  background-color: #00d1b2;
+  color: #fff;
+}
+
+.bd-spacing-table .bd-current-column {
+  background-color: whitesmoke;
+}
+
+.bd-spacing-table .bd-current-value {
+  background-color: #feecf0;
+}
+
+.bd-spacing-table .bd-current-value code {
+  background-color: #f14668;
+  color: #fff;
 }
 
 :root {
