Add divide() function

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -475,7 +475,7 @@ $column-gap: 0.75rem !default
 
   // Max number of column into a row
   @for $i from 1 through 12
-    $col-max-width: percentage(1 / $i)
+    $col-max-width: percentage(divide(1, $i))
     &.has-#{$i}
       flex-wrap: wrap
       & > .column
