--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -220,6 +220,7 @@ $navbar-breakpoint: $tablet;
 @import './_sass/components/native';
 @import './_sass/components/fortyfour';
 @import './_sass/components/spacing-table';
+@import './_sass/components/survey';
 
 @import './_sass/pages/index';
 @import './_sass/pages/docs';
