--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*! bulma.io v0.9.2 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.9.3 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
 .button, .input, .textarea, .select select, .file-cta,
 .file-name, .pagination-previous,
@@ -19448,6 +19448,29 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 .bd-spacing-table .bd-current-value code {
   background-color: #f14668;
   color: #fff;
+}
+
+#survey-banner {
+  align-items: center;
+  background-color: #ebfffc;
+  color: #00947e;
+  display: flex;
+  font-size: 0.875rem;
+  justify-content: center;
+  padding: 0.5em;
+}
+
+#survey-banner a,
+#survey-banner strong {
+  color: inherit;
+}
+
+#survey-banner a {
+  text-decoration: underline;
+}
+
+#survey-banner p {
+  margin-right: 1em;
 }
 
 :root {
