Add download button

--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -62,7 +62,14 @@
         </a>
       </div>
 
-      <div class="navbar-item bd-navbar-sponsor-button is-hidden-touch">
+      <div class="navbar-item bd-navbar-download-button is-hidden-touch">
+        <a class="button is-primary mr-3" href="{{ site.data.meta.download }}">
+          <span class="icon">
+            <i class="fas fa-download"></i>
+          </span>
+          <span>Download</span>
+        </a>
+
         <a href="{{ site.url }}{{ site.data.links.by_id.become-sponsor.path }}" class="button is-sponsor is-light">
           <span class="icon is-small">
             <i class="fas fa-thumbs-up"></i>
