--- a/docs/_sass/components/navbar.scss
+++ b/docs/_sass/components/navbar.scss
@@ -223,6 +223,7 @@
   }
 }
 
+.bd-navbar-mobile-download-icon,
 .bd-navbar-mobile-sponsor-icon {
   display: none !important;
 }
@@ -249,6 +250,7 @@
 }
 
 @media screen and (min-width: 450px) and (max-width: $tablet - 1px) {
+  .bd-navbar-mobile-download-icon,
   .bd-navbar-mobile-sponsor-icon {
     display: flex !important;
   }
