--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -18604,6 +18604,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   box-shadow: inset 0 -2px 0 0 var(--search);
 }
 
+.bd-navbar-mobile-download-icon,
 .bd-navbar-mobile-sponsor-icon {
   display: none !important;
 }
@@ -18626,6 +18627,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 @media screen and (min-width: 450px) and (max-width: 768px) {
+  .bd-navbar-mobile-download-icon,
   .bd-navbar-mobile-sponsor-icon {
     display: flex !important;
   }
