Fix newsletter form

--- a/docs/_includes/global/newsletter.html
+++ b/docs/_includes/global/newsletter.html
@@ -25,6 +25,7 @@
               <input type="text" name="hp" id="hp">
             </div>
             <input type="hidden" name="list" value="So5UY3O9gHJkq892bn763Tyf4A">
+            <input type="hidden" name="subform" value="yes">
             <button class="button is-medium is-primary">
               <strong>Subscribe</strong>
             </button>
