Form groups can have nested fields
The basic form group capability does space a Form group that has `.field`s as direct children, only `.control`s. This allows one to also use addons on the form elements that are grouped together.

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -94,6 +94,10 @@ $label-colors: $form-colors !default
   &.is-grouped
     display: flex
     justify-content: flex-start
+    & > .field
+      &:not(:last-child)
+        margin-bottom: 0
+        +ltr-property("margin", 0.75rem)
     & > .control
       flex-shrink: 0
       &:not(:last-child)
