--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,11 +1,17 @@
 @import "../utilities/derived-variables"
+@import "../utilities/derived-variables-dark"
 
 $footer-background-color: $scheme-main-bis !default
 $footer-color: false !default
 $footer-padding: 3rem 1.5rem 6rem !default
+$footer-background-color-invert: $scheme-invert-bis !default
 
 .footer
   background-color: $footer-background-color
   padding: $footer-padding
+  +darktheme
+    background-color: $footer-background-color-invert
   @if $footer-color
     color: $footer-color
+    +darktheme
+      color: $footer-color-invert
