--- a/sass/utilities/_all.sass
+++ b/sass/utilities/_all.sass
@@ -4,6 +4,7 @@
 @import "initial-variables"
 @import "functions"
 @import "derived-variables"
+@import "derived-variables-dark"
 @import "mixins"
 @import "controls"
 @import "extends"
